--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
     <footer class="flex">
         <div class="social-icons flex">
-            <a href="" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://web.facebook.com/m_ammad_hassan/" target="_blank">
+                <i class="fab fa-facebook-square"></i>
+            </a>
             <a href="" target="_blank"><i class="fab fa-twitter-square"></i></a>
             <a href="" target="_blank"><i class="fab fa-instagram-square"></i></a>
             <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
