--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
             <a href="https://web.facebook.com/m_ammad_hassan/" target="_blank">
                 <i class="fab fa-facebook-square"></i>
             </a>
-            <a href="" target="_blank"><i class="fab fa-twitter-square"></i></a>
-            <a href="" target="_blank"><i class="fab fa-instagram-square"></i></a>
-            <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="" target="_blank"><i class="fab fa-github-square"></i></a>
+            <a href="https://twitter.com/m_ammadhassan" target="_blank">
+                <i class="fab fa-twitter-square"></i>
+            </a>
+            <a href="https://www.instagram.com/m_ammadhassan" target="_blank">
+                <i class="fab fa-instagram-square"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/m-ammadhassan/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/m-ammadhassan" target="_blank">
+                <i class="fab fa-github-square"></i>
+            </a>
         </div>
         
     </footer>
